--- a/app/src/main/res/drawable/bacckground_color.xml
+++ b/app/src/main/res/drawable/bacckground_color.xml
@@ -5,8 +5,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#9b4cb9"
-        android:endColor="#4b0a87"
+        android:startColor="#262626"
+        android:endColor="#3c3c3c"
         android:type="linear">
     </gradient>
 </shape>
