--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -51,38 +51,42 @@
         >
     <TextView
         android:id="@+id/numberBMI"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
         android:layout_weight="1"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal"
-        android:textSize="25sp"></TextView>
+        android:textSize="20sp"></TextView>
 
     <TextView
         android:id="@+id/numberBMR"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
-        android:gravity="center_horizontal"
+        android:textColor="#FFFFFF"
+        android:gravity="center"
         android:layout_weight="1"
-        android:textSize="25sp"></TextView>
+        android:textSize="20sp"></TextView>
 
     <TextView
         android:id="@+id/numberTDEE"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
-        android:gravity="center_horizontal"
+        android:textColor="#FFFFFF"
+        android:gravity="center"
         android:layout_weight="1"
-        android:textSize="25sp"></TextView>
+        android:textSize="20sp"></TextView>
     <TextView
         android:id="@+id/numberTargete"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textColor="#FFFFFF"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:textSize="25sp"></TextView>
+        android:gravity="center"
+        android:textSize="20sp"></TextView>
     </LinearLayout>
 
     <LinearLayout
@@ -102,6 +106,7 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="BMI"
+            android:textColor="#FFFFFF"
             android:textSize="25sp"></TextView>
 
         <TextView
@@ -111,6 +116,7 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="BMR"
+            android:textColor="#FFFFFF"
             android:textSize="25sp"></TextView>
 
 
@@ -120,6 +126,7 @@
         android:layout_height="wrap_content"
         android:text="TDEE"
         android:layout_weight="1"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal"
         android:textSize="25sp"></TextView>
 
@@ -129,6 +136,7 @@
         android:layout_height="wrap_content"
         android:text="Target"
         android:layout_weight="1"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal"
         android:textSize="25sp"></TextView>
 
@@ -142,6 +150,7 @@
         android:layout_below="@id/R4"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="20sp"
         >
     <Button
         android:layout_width="match_parent"
@@ -152,7 +161,8 @@
         android:layout_weight="1"
         android:layout_marginRight="30sp"
         android:layout_marginLeft="30sp"
-        android:background="@drawable/button_style"
+        android:textColor="#ffffff"
+        android:background="@drawable/button_login_style"
         ></Button>
 
     <Button
@@ -165,7 +175,8 @@
         android:layout_marginTop="30sp"
         android:layout_marginRight="30sp"
         android:layout_marginLeft="30sp"
-        android:background="@drawable/button_style"
+        android:textColor="#ffffff"
+        android:background="@drawable/button_login_style"
         ></Button>
     </LinearLayout>
     <LinearLayout
@@ -174,6 +185,7 @@
         android:layout_below="@id/R5"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="20sp"
         >
     <Button
         android:layout_width="match_parent"
@@ -185,7 +197,8 @@
         android:layout_marginTop="30sp"
         android:layout_marginRight="30sp"
         android:layout_marginLeft="30sp"
-        android:background="@drawable/button_style"
+        android:textColor="#ffffff"
+        android:background="@drawable/button_login_style"
         ></Button>
     </LinearLayout>
 </RelativeLayout>
