--- a/app/src/main/res/layout/activity_totalkcal__user.xml
+++ b/app/src/main/res/layout/activity_totalkcal__user.xml
@@ -21,6 +21,7 @@
             android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#ffffff"
             android:text="Status :"
             android:textSize="30sp"
             >
@@ -31,7 +32,8 @@
             android:id="@+id/statusname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" Normal"
+            android:text=" Null"
+            android:textColor="#ffffff"
             android:textSize="30sp"
             >
         </TextView>
@@ -54,6 +56,7 @@
             android:id="@+id/totalkcal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#ffffff"
             android:text="totalkcal to day : "
             android:textSize="30sp"
             >
@@ -65,7 +68,8 @@
             android:id="@+id/numberkcal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2000"
+            android:text="Null"
+            android:textColor="#ffffff"
             android:textSize="30sp"
             >
         </TextView>
@@ -75,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" kcal"
+            android:textColor="#ffffff"
             android:textSize="30sp"
             >
         </TextView>
@@ -86,6 +91,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30sp"
         android:gravity="center"
      >
 
@@ -94,7 +100,8 @@
             android:text="start"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/button_style"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_login_style"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             ></Button>
