--- a/app/src/main/res/layout/activity_selectlistfood_user.xml
+++ b/app/src/main/res/layout/activity_selectlistfood_user.xml
@@ -70,6 +70,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
+        android:id="@+id/addfood"
         android:layout_width="69dp"
         android:layout_height="69dp"
         android:layout_marginBottom="24dp"
