--- a/app/src/main/res/layout/add_excercise.xml
+++ b/app/src/main/res/layout/add_excercise.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/app_bar1"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:id="@+id/app_bar"
     android:background="@color/colorAccent"
     >
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,17 +16,14 @@
             android:layout_alignParentLeft="true" />
 
         <TextView
-            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="SELECTFOOD"
-            android:textAlignment="center"
+            android:text="ADDEXCERCISE"
+            android:textStyle="bold"
             android:textColor="#000000"
             android:textSize="24dp"
-            android:textStyle="bold"/>
-
-
+            android:layout_marginTop="3dp"
+            android:textAlignment="center" />
 
     </RelativeLayout>
 
