--- a/app/src/main/res/layout/activity_addfood_user.xml
+++ b/app/src/main/res/layout/activity_addfood_user.xml
@@ -22,11 +22,11 @@
         android:layout_marginTop="12dp"
         android:text="ชื่ออาหาร"
         android:textColor="#ffffff"
-        app:layout_constraintStart_toStartOf="@+id/editText"
+        app:layout_constraintStart_toStartOf="@+id/inputname"
         app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/inputname"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -42,11 +42,11 @@
         android:layout_marginTop="16dp"
         android:text="แคลอรี่"
         android:textColor="#ffffff"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toStartOf="@+id/inputkcal"
+        app:layout_constraintTop_toBottomOf="@+id/inputname" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/inputkcal"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -63,7 +63,7 @@
         android:text="จำนวน"
         android:textColor="#ffffff"
         app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/inputkcal" />
 
     <TextView
         android:id="@+id/textView6"
@@ -71,7 +71,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
         android:layout_marginBottom="44dp"
-        android:text="1"
         android:textColor="#ffffff"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
@@ -80,28 +79,28 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/sub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/subbutton"
         android:text="-"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintEnd_toStartOf="@+id/add"
         app:layout_constraintTop_toTopOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.517" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:background="@drawable/addbutton"
         android:text="+"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="@+id/button2"
+        app:layout_constraintBottom_toBottomOf="@+id/sub"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button2"
+        app:layout_constraintTop_toTopOf="@+id/sub"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
@@ -111,11 +110,11 @@
         android:layout_marginTop="44dp"
         android:text="หน่วยอาหาร"
         android:textColor="#ffffff"
-        app:layout_constraintStart_toStartOf="@+id/editText4"
+        app:layout_constraintStart_toStartOf="@+id/inputunit"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/inputunit"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -131,26 +130,26 @@
         android:layout_marginTop="36dp"
         android:text="ประเภท"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/editText5"
-        app:layout_constraintStart_toStartOf="@+id/editText5"
-        app:layout_constraintTop_toBottomOf="@+id/editText4"
+        app:layout_constraintBottom_toTopOf="@+id/inputtypeunit"
+        app:layout_constraintStart_toStartOf="@+id/inputtypeunit"
+        app:layout_constraintTop_toBottomOf="@+id/inputunit"
         app:layout_constraintVertical_bias="0.048" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/inputtypeunit"
         android:layout_width="305dp"
         android:layout_height="40dp"
         android:layout_marginTop="56dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#ffffff"
-        app:layout_constraintEnd_toEndOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="@+id/buttonaddfood"
         app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintStart_toStartOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintStart_toStartOf="@+id/buttonaddfood"
+        app:layout_constraintTop_toBottomOf="@+id/inputunit" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonaddfood"
         android:layout_width="311dp"
         android:layout_height="53dp"
         android:layout_marginTop="32dp"
@@ -162,7 +161,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText5"
+        app:layout_constraintTop_toBottomOf="@+id/inputtypeunit"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
