--- a/app/src/main/res/layout/activity_addexcercise_user.xml
+++ b/app/src/main/res/layout/activity_addexcercise_user.xml
@@ -23,17 +23,17 @@
         android:layout_marginTop="28dp"
         android:text="ชื่อกิจกกรม"
         android:textColor="#ffffff"
-        app:layout_constraintStart_toStartOf="@+id/editText"
+        app:layout_constraintStart_toStartOf="@+id/inputnameexcercise"
         app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/inputnameexcercise"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#ffffff"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
+        app:layout_constraintEnd_toEndOf="@+id/inputkcal"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
@@ -43,23 +43,23 @@
         android:layout_marginTop="56dp"
         android:text="แคลอรี่"
         android:textColor="#ffffff"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toStartOf="@+id/inputkcal"
+        app:layout_constraintTop_toBottomOf="@+id/inputnameexcercise" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/inputkcal"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#ffffff"
-        app:layout_constraintEnd_toEndOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="@+id/buttonaddexceercisee"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button6"
+        app:layout_constraintStart_toStartOf="@+id/buttonaddexceercisee"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/buttonaddexceercisee"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
@@ -72,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/inputkcal"
         app:layout_constraintVertical_bias="0.0" />
 
 
