--- a/app/src/main/res/layout/list_excercise.xml
+++ b/app/src/main/res/layout/list_excercise.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="60dp"
     android:gravity="center"
     android:id="@+id/input"
     >
@@ -17,6 +17,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="30dp"
+            android:textColor="#FFFFFF"
             android:text="name" />
         <LinearLayout
             android:layout_width="150dp"
@@ -29,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:textSize="30dp"
+                android:textColor="#FFFFFF"
                 android:text="kcal"/>
             <TextView
                 android:id="@+id/numkcal"
@@ -36,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:textSize="30dp"
+                android:textColor="#FFFFFF"
                 android:text="kcal" />
         </LinearLayout>
 
@@ -43,5 +46,5 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#F0F0F0" />
+        android:background="#FFFFFF" />
 </LinearLayout>
