--- a/app/src/main/res/layout/activity_list_saveedit_food.xml
+++ b/app/src/main/res/layout/activity_list_saveedit_food.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/searchView"
-        layout="@layout/barselect"
+        layout="@layout/app_editdatafood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
