refactor(Mobile):edit bug delect food and excercise  and Change language UI  set dialog  and set up sweet alert liberally

--- a/app/src/main/res/layout/activity_register__infirmation.xml
+++ b/app/src/main/res/layout/activity_register__infirmation.xml
@@ -16,7 +16,7 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Register"
+            android:text="สมัครข้อมูล"
             android:textSize="30dp"
             android:textColor="#ffffff"
             ></TextView>
@@ -37,7 +37,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_width="match_parent"
-            android:hint="firstname"
+            android:hint="ชื่อจริง"
             android:textColor="#ffffff"
             android:textColorHint="#ffffff"
             android:backgroundTint="#ffffff"
@@ -63,7 +63,7 @@
             android:layout_marginRight="25dp"
             android:layout_width="match_parent"
             android:layout_height="40sp"
-            android:hint="Lastname"
+            android:hint="นามสกุล"
             android:textColor="#ffffff"
             android:textColorHint="#ffffff"
             android:backgroundTint="#ffffff"
@@ -91,7 +91,7 @@
             android:layout_marginRight="25dp"
             android:layout_width="match_parent"
             android:layout_height="40sp"
-            android:hint="Weight"
+            android:hint="น้ำหนัก เป็น กก."
             android:textColor="#ffffff"
             android:textColorHint="#ffffff"
             android:backgroundTint="#ffffff"
@@ -106,7 +106,7 @@
             android:layout_marginRight="25dp"
             android:layout_width="match_parent"
             android:layout_height="40sp"
-            android:hint="Height"
+            android:hint="ส่วนสูง เป็น ซม."
             android:textColor="#ffffff"
             android:textColorHint="#ffffff"
             android:backgroundTint="#ffffff"
@@ -129,7 +129,7 @@
             android:layout_marginRight="25dp"
             android:layout_width="match_parent"
             android:layout_height="40sp"
-            android:hint="Age"
+            android:hint="อายุ เป็น ปี"
             android:textColor="#ffffff"
             android:textColorHint="#ffffff"
             android:backgroundTint="#ffffff"
@@ -143,7 +143,7 @@
             android:paddingLeft="15dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:hint="Gender"
+            android:hint="เพศ"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_alignParentStart="true"
@@ -196,8 +196,8 @@
     app:met_textColorHint="#ffffff"
     app:met_baseColor="#ffffff"
     android:layout_width="match_parent"
-    android:layout_height="40sp"
-    android:hint="Levelwork out"
+    android:layout_height="match_parent"
+    android:hint="ระดับการออกกำลังกาย"
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:layout_alignParentStart="true"
@@ -208,7 +208,7 @@
     <Button
         android:layout_marginTop="30sp"
         android:id="@+id/registerbutton"
-        android:text="Register"
+        android:text="สมัคร"
         android:textColor="#ffffff"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
