--- a/app/src/main/res/layout/activity_register__user.xml
+++ b/app/src/main/res/layout/activity_register__user.xml
@@ -21,7 +21,7 @@
             android:id="@+id/H1"
             android:textColor="#ffffff"
             android:textSize="30dp"
-            android:text="Register"
+            android:text="สมัครข้อมูล"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             ></TextView>
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
-            android:text="Email"
+            android:text="อีเมล"
             android:textColor="#ffffff"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
             android:textColor="#ffffff"
-            android:text="Password"
+            android:text="รหัสผ่าน"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             ></TextView>
@@ -127,7 +127,7 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="ConfrimPassword"
+    android:text="ยืนยันรหัสผ่าน"
     android:layout_weight="2.5"
     android:textColor="#ffffff"
     android:layout_marginRight="30sp"
@@ -169,7 +169,7 @@
 
         <Button
             android:layout_width="250sp"
-            android:text="Next"
+            android:text="ถัดไป"
             android:layout_height="wrap_content"
             android:id="@+id/button1"
             android:textColor="#ffffff"
